fix: layout issues of the mail page - Displaced labels and inputs in Editor's manager dialogs - Sidebar is scrolled in scenarios, where Reply/Reply All/Forward is used and the page is scrollable - screensot - reproducible with smaller browser window or if about 6 files are uploaded. - On smaller screen if the height is not enough to show the entire sidebar, there is some space for a scrollbar.

--- a/TelerikMvcWebMail/Content/new.scss
+++ b/TelerikMvcWebMail/Content/new.scss
@@ -36,7 +36,7 @@
         position: relative;
     }
 
-    label {
+    .label {
         display: block;
         padding: 15px 0 5px;
     }
