--- a/TelerikMvcWebMail/Content/sidebar.scss
+++ b/TelerikMvcWebMail/Content/sidebar.scss
@@ -5,8 +5,6 @@
     min-width: 200px;
     display: flex;
     flex-direction: column;
-    margin-right: -20px;
-    padding-right: 20px;
     background: #fafafa;
     overflow: auto;
 
